# VeryCursedSha3

./: CMakeLists.txt  README.md
src/: bitset_rot.hpp  circular_array.hpp  main.cc  main.cpp  multi_array.hpp  sha3.hpp  template_utils.hpp
test/: bitset_rot_test.cpp  multi_array_test.cpp  sha3_test.cpp
